--- a/MyProject/my-project/src/Component/Navbar/Navbar.css
+++ b/MyProject/my-project/src/Component/Navbar/Navbar.css
@@ -1,13 +1,44 @@
-.text{
-    color: whitesmoke;
-    font-weight: bold;
-    margin-top: 0;
-    margin-left: 60px;
-    padding: 5px;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
+
+
+
+.Navbar{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: rgb(232 208 181);
+    padding: 20px;
+    list-style: none;
 }
 
- 
-.Navbar-box{
-    width: 100%;
-    background-color: rgb(163, 162, 162);
+
+.Nav-link{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 60%;
+    font-weight: bolder;
+    list-style: none;
+    color: rgb(17, 16, 16);
+    
+}
+
+.li-item{
+    /* border: 1px solid black; */
+    padding: 6px;
+    border-radius: 7px;
+    font-family: 'Roboto Condensed', sans-serif;
+    color: black;
+}
+.li-item:hover{
+    color:white !important;
+    background-color:  rgb(226, 110, 110);
+    cursor: pointer;
+  
+
+}
+
+.Nav{
+    color: black;
+    text-decoration: none;
 }
