--- a/MyProject/my-project/src/Pages/Contact/Contact.css
+++ b/MyProject/my-project/src/Pages/Contact/Contact.css
@@ -1,11 +1,4 @@
 
-
-
-
-
-
-
-
 .box1{
     /* background-color: white !important; */
     /* border: 2px solid rgb(243, 231, 231); */
@@ -40,6 +33,8 @@ padding-top: 8px;
 .head3{
     /* text-align: center; */
     padding: 5px;
+    text-transform: uppercase;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 /* .icon-box{
@@ -47,13 +42,13 @@ padding-top: 8px;
 } */
 
 .main-box{
-    color: wheat;
+    color: rgb(245, 245, 245);
     /* height: 10rem; */
   
 }
 
 .footer{
-    background-color: black;
+    background-color: rgb(39, 38, 38);
     height: 18rem;
 }
 
@@ -61,7 +56,7 @@ padding-top: 8px;
 
 a{
     /* display: flex; */
-    color: white;
+    color: rgb(241, 241, 241);
 }
 
 
@@ -88,6 +83,14 @@ a{
 }
 .form-group{
     padding: 9px;
+}
+
+.msg-box{
+    background-color: rgb(253, 251, 245);
+}
+
+.form-box{
+    background-color: rgb(253, 251, 245);
 }
 
 
