--- a/MyProject/my-project/src/Pages/Home/Home.css
+++ b/MyProject/my-project/src/Pages/Home/Home.css
@@ -1,35 +1,26 @@
-*{
-    background: transparent;
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+
+.HOME{
+    padding: 68px;
+    background-color:white;
     
+
 }
 
-.home-page{
-    background-color: transparent;
-    background-color: rgb(250, 229, 196);
-   background-size: cover;
-   height: 45rem;
-   /* border-bottom-left-radius: 140px;
-   border-bottom-right-radius: 140px; */
-    
-}
 
+
+.homePage{
+    text-align: center;
+    /* border: 2px solid black; */
+    background-color:rgb(232 208 181);
+    height: 35rem;
+    padding: 20px;
+    padding-top: 220px;
+    border-radius: 60px;
+    /* justify-content: center; */
+}
 
 .head{
-    color: rgb(17, 17, 16);
-    text-align: center;
-    padding-top: 15rem;
-    /* padding-right: 48rem; */
-    /* font-family: 'Pacifico', cursive; */
-    text-transform:uppercase ;
-    text-shadow: 2px 2px white;
-  
+    font-family: 'Lobster', cursive;
 }
-
-
-
-
-
-
-
-
-
